# TaleKeeper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/guide/: index.md  tips-and-tricks.md
docs/guide/campaigns/: index.md  roster.md
docs/guide/export/: email-sharing.md  index.md  text-export.md
docs/guide/getting-started/: index.md  setup-wizard.md
docs/guide/illustrations/: index.md
docs/guide/recording/: index.md  uploading.md
docs/guide/settings/: index.md
docs/guide/speakers/: index.md  merging.md  voice-signatures.md
docs/guide/summaries/: index.md  pov-journals.md
docs/guide/transcription/: index.md  retranscription.md
docs/plans/: 2026-02-28-language-selection-design.md  2026-02-28-language-selection.md  2026-02-28-ux-improvements-design.md  2026-03-02-batch-printable-export-design.md  2026-03-02-batch-printable-export.md  2026-03-02-black-box-test-coverage-design.md  2026-03-02-black-box-test-coverage.md  2026-03-02-incremental-voice-enrollment-design.md  2026-03-02-incremental-voice-enrollment.md  2026-03-02-user-guide-design.md  2026-03-02-user-guide-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.svelte  App.test.ts  app.css
frontend/src/components/: AudioPlayer.svelte  AudioPlayer.test.ts  ConfirmDialog.svelte  ConfirmDialog.test.ts  ExportSection.svelte  ExportSection.test.ts  IllustrationsSection.svelte  IllustrationsSection.test.ts  LanguageSelect.svelte  LanguageSelect.test.ts  RecordingControls.svelte  RecordingControls.test.ts  SetupWizard.svelte  SetupWizard.test.ts  Sidebar.svelte  Sidebar.test.ts  SpeakerPanel.svelte  SpeakerPanel.test.ts  Spinner.svelte  Spinner.test.ts  SummarySection.svelte  SummarySection.test.ts  TranscriptView.svelte  TranscriptView.test.ts
frontend/src/lib/: api.test.ts  api.ts  languages.test.ts  languages.ts  router.svelte.ts  router.test.ts  theme.svelte.ts  theme.test.ts  wizard.svelte.ts  wizard.test.ts
frontend/src/routes/: CampaignDashboard.svelte  (+9 more)
openspec/: config.yaml
scripts/: serve_docs.sh  take_screenshots.py
src/talekeeper/: __init__.py  __main__.py  app.py  cli.py  paths.py
tests/: conftest.py  test_merge_speakers.py
tests/routers/: test_exports.py
(+256 files in other folders)
