[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talekeeper"
version = "0.1.0"
description = "Record, transcribe, and summarize D&D sessions — entirely offline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "pyannote-audio>=3.3",
    "weasyprint>=63",
    "aiosqlite>=0.20",
    "pydub>=0.25",
    "audioop-lts>=0.2.2; python_version>='3.13'",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
]

[project.scripts]
talekeeper = "talekeeper.cli:main"
