[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talekeeper"
version = "0.1.0"
description = "Record, transcribe, and summarize D&D sessions — entirely offline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "speechbrain>=1.0",
    "scikit-learn>=1.3",
    "weasyprint>=63",
    "aiosqlite>=0.20",
    "pydub>=0.25",
    "audioop-lts>=0.2.2; python_version>='3.13'",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "openai>=1.0",
    "scipy>=1.10",
    "requests>=2.30",
]

[project.scripts]
talekeeper = "talekeeper.cli:main"
