[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talekeeper"
version = "0.1.0"
description = "Record, transcribe, and summarize D&D sessions — entirely offline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "speechbrain>=1.0",
    "scikit-learn>=1.3",
    "weasyprint>=63",
    "aiosqlite>=0.20",
    "pydub>=0.25",
    "audioop-lts>=0.2.2; python_version>='3.13'",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "openai>=1.0",
    "requests>=2.30",
    "scipy>=1.10",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.28",
]
docs = [
    "zensical>=0.0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
talekeeper = "talekeeper.cli:main"
